Release v0.1.2 feat endpoint list and edit employee
