# app/Models/User.php
@@ -21,7 +21,8 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
-        'profile'
+        'profile',
+        'birthdate'
     ];
 
     /**
