# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API cadastro de colaboradores",
-        "description": "API cadastro de colaboradores",
+        "title": "API Cadastro de Colaboradores",
+        "description": "API para o cadastro de colaboradores",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "email": "camilamaiara@hotmail.com.br"
@@ -14,10 +14,128 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/employee/{id}": {
+            "get": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Obter um colaborador",
+                "description": "Retorna um colaborador por ID",
+                "operationId": "getColaboradores",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Retorna um colaborador por ID"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/employee/list": {
+            "get": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Obter todos os colaboradores",
+                "description": "Retorna uma lista com todos os colaborador",
+                "operationId": "2d5ba6f3b540b20e6bf2772664a1334d",
+                "responses": {
+                    "200": {
+                        "description": "Retorna uma lista de colaboradores"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/employee/edit/{id}": {
+            "put": {
+                "tags": [
+                    "Employee"
+                ],
+                "summary": "Editar um colaborador",
+                "description": "Atualiza os dados de um colaborador por ID",
+                "operationId": "6d76b538e1d0c15fafed4dc2bc0c5fd0",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Employee ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Camila Souza"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "camila@minhaempresa.com"
+                                    },
+                                    "birthdate": {
+                                        "type": "string",
+                                        "example": "01/01/2000"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Dados do colaborador atualizados com sucesso"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Colaborador não encontrado"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "tags": [
-                    "Login"
+                    "Authentication"
                 ],
                 "summary": "Login",
                 "operationId": "login",
@@ -60,12 +178,100 @@
                     }
                 }
             }
+        },
+        "/api/v1/register": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Register",
+                "operationId": "register",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "birthdate",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "date",
+                            "example": "01/01/2000"
+                        }
+                    },
+                    {
+                        "name": "profile",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "apiAuth": {
+                "type": "http",
+                "name": "bearerAuth",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
         }
     },
     "tags": [
         {
-            "name": "Login",
-            "description": "Login"
+            "name": "Employee",
+            "description": "Employee"
+        },
+        {
+            "name": "Authentication",
+            "description": "Authentication"
         }
     ]
 }
